# confidence_mapper

./: CMakeLists.txt  README.md  package.xml
config/: file_path.yaml
config/confidence_maps/: map_config.yaml
config/postprocessing/: filters.yaml  postprocessor_pipeline.yaml
config/robots/: simple_demo_robot.yaml  topics.yaml
include/confidence_mapping/: ConfidenceMap.hpp  ConfidenceMapFunctors.hpp  ConfidenceMapping.hpp  Filter.hpp  PointXYZRGBConfidenceRatio.hpp  RobotMotionMapUpdater.hpp  ThreadSafeDataWrapper.hpp  WeightedEmpiricalCumulativeDistributionFunction.hpp
include/confidence_mapping/input_sources/: Input.hpp  InputSourceManager.hpp
include/confidence_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp  PostprocessingWorker.hpp  PostprocessorPool.hpp
include/confidence_mapping/sensor_processors/: LaserSensorProcessor.hpp  PerfectSensorProcessor.hpp  SensorProcessorBase.hpp  StereoSensorProcessor.hpp  StructuredLightSensorProcessor.hpp
launch/: confidence_map.launch.py  visualization.launch.py
src/: ConfidenceMap.cpp  ConfidenceMapping.cpp  Filter.cpp  PointXYZRGBConfidenceRatio.cpp  RobotMotionMapUpdater.cpp  confidence_map_filter_node.cpp  confidence_mapping_node.cpp  test_service.cpp
src/input_sources/: Input.cpp  InputSourceManager.cpp
src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessingWorker.cpp  PostprocessorPool.cpp
src/sensor_processors/: LaserSensorProcessor.cpp  PerfectSensorProcessor.cpp  SensorProcessorBase.cpp  StereoSensorProcessor.cpp  StructuredLightSensorProcessor.cpp
(+1 files in other folders)
